--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -41,15 +41,19 @@ jobs:
       
       - name: Git remote add upstream
         working-directory: fork-to-branch
-        run: git remote add upstream https://${{ secrets.GITHUB_TOKEN }}@github.com/fork-to-branch.git
+        run: |
+          git remote add upstream https://${{ secrets.GITHUB_TOKEN }}@github.com/fork-to-branch.git
+          git checkout -b feature/${{ github.event.inputs.source-branch }}
+          git push --set-upstream origin feature/${{ github.event.inputs.source-branch }}
+
       
-      - name: Git create new branch
-        working-directory: fork-to-branch
-        run: git checkout -b feature/${{ github.event.inputs.source-branch }}
+#       - name: Git create new branch
+#         working-directory: fork-to-branch
+#         run: git checkout -b feature/${{ github.event.inputs.source-branch }}
       
-      - name: Git push new branch
-        working-directory: fork-to-branch
-        run: git push --set-upstream origin feature/${{ github.event.inputs.source-branch }}
+#       - name: Git push new branch
+#         working-directory: fork-to-branch
+#         run: git push --set-upstream origin feature/${{ github.event.inputs.source-branch }}
 
 
 
