--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -41,7 +41,8 @@ jobs:
       
       - name: Git remote add upstream
         run: |
-          git remote add upstream https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.event.inputs.contributor-name }}/fork-to-branch.git
+          set -eo pipefail
+          git remote add upstream https://github.com/${{ github.event.inputs.contributor-name }}/fork-to-branch.git
           git fetch --all
           git push --force upstream "refs/remotes/upstream/${{ github.event.inputs.source-branch }}:refs/heads/feature/${{ github.event.inputs.source-branch }}"
           git remote remove upstream || echo "Removed new remote upstream"
