--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -17,6 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+            persist-credentials: false
+            fetch-depth: 0 
+            
       - name: Check branch exist
         run: |
           set +e
@@ -41,7 +45,6 @@ jobs:
       
       - name: Git remote add upstream
         run: |
-          set -eo pipefail
           git remote add upstream https://github.com/${{ github.event.inputs.contributor-name }}/fork-to-branch.git
           git fetch --all
           git push --force upstream "refs/remotes/upstream/${{ github.event.inputs.source-branch }}:refs/heads/feature/${{ github.event.inputs.source-branch }}"
