--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
             fetch-depth: 0 
-            token: ${{ github.fork-to-branch }}
+            token: ${{ secrets.fork-to-branch }}
             
       - name: Check branch exist
         run: |
