--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Check branch exist
         run: |
           set +e
-          cmd="$(git rev-parse --verify --quiet  feature/${{ github.event.inputs.source-branch }})"
+          cmd="$(git show-ref --verify --quiet refs/heads/feature/${{ github.event.inputs.source-branch }})"
           if [[ ! -z "$cmd" ]]
           then
             git branch -d feature/${{ github.event.inputs.source-branch }}
