--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -23,7 +23,7 @@ jobs:
             
       - name: Check branch exist
         run: |
-          cmd=$(echo "git show-ref --verify --quiet refs/heads/feature/${{ github.event.inputs.source-branch }}")
+          cmd="$(git show-ref --verify --quiet refs/heads/feature/${{ github.event.inputs.source-branch }})"
           echo "$cmd"
      # if [[ ! -z "$cmd" ]]
      # then
