--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -23,11 +23,13 @@ jobs:
             
       - name: Check branch exist
         run: |
-          existed_in_local=$(git branch --list feature/${{ github.event.inputs.source-branch }})
-          if [[ -z ${existed_in_local} ]]
+          existed_in_repo=$(git ls-remote --heads origin feature/${{ github.event.inputs.source-branch }})
+          if [[ -z ${existed_in_repo} ]]
           then
             git branch -d feature/${{ github.event.inputs.source-branch }}
             echo "branch feature/${{ github.event.inputs.source-branch }} deleted"
+          else
+            echo "branch feature/${{ github.event.inputs.source-branch }} is not exists"
           fi
      # if [[ ! -z "$cmd" ]]
      # then
