--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -11,40 +11,39 @@ on:
 #         type: string
 #         description: write your github-user name.
 #         required: true
-#   issue_comment:
-#     types: [created]
+  issue_comment:
+    types: [created]
   pull_request:
     types: [created, synchronize, reopened]
 
 jobs:
   create_branch:
     runs-on: ubuntu-latest
+    if: ${{ github.event.issue.pull_request }}
     env:
       HEAD_OWNER: ${{ github.event.pull_request.head.repo.owner.login }}
-    steps:
-      - uses: khan/pull-request-comment-trigger@v1.1.0
-        id: check
-        with:
-          trigger: "run branch"
-        env:
-          GITHUB_TOKEN: '${{ secrets.PERSONAL_TOKEN }}'
-    
+    steps: 
       - uses: actions/checkout@v2
         if: steps.check.outputs.triggered == 'true'
         with:
             fetch-depth: 0 
             token: ${{ secrets.PERSONAL_TOKEN }}
+            
+      - uses: khan/pull-request-comment-trigger@v1.1.0
+        id: check
+        with:
+          trigger: "run branch"
   
       - name: Check if branch exists
         if: steps.check.outputs.triggered == 'true'
         run: |
-          existed_in_repo=$(git ls-remote --heads origin pr/${{ github.event.pull_request.base.ref }})
+          existed_in_repo=$(git ls-remote --heads origin pr/${{ github.event.issue.pull_request.base.ref }})
           if [[ -z ${existed_in_repo} ]]
           then
-            echo "branch pr/${{ github.event.pull_request.base.ref }} is not exists"
+            echo "branch pr/${{ github.event.issue.pull_request.base.ref }} is not exists"
           else
-            git push origin --delete pr/${{ github.event.pull_request.base.ref }}
-            echo "branch pr/${{ github.event.pull_request.base.ref }} deleted" 
+            git push origin --delete pr/${{ github.event.issue.pull_request.base.ref }}
+            echo "branch pr/${{ github.event.issue.pull_request.base.ref }} deleted" 
           fi
 
 
