--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -19,6 +19,7 @@ on:
 jobs:
   create_branch:
     runs-on: ubuntu-latest
+    if: ${{ github.event.requested.name == 'shaharblanksela'}}
     env:
       HEAD_OWNER: ${{ github.event.pull_request.head.repo.owner.login }}
     steps: 
