--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -11,17 +11,17 @@ on:
 #         type: string
 #         description: write your github-user name.
 #         required: true
-#   issue_comment:
-#     types: [created]
-  pull_request_target:
-    types: [created, edited, synchronize, reopened, review_requested]
+  issue_comment:
+    types: [created]
+  pull_request:
+    types: [created, synchronize, reopened]
 
 jobs:
   create_branch:
     runs-on: ubuntu-latest
-    if: ${{ github.event.requested.name == 'shaharblanksela'}}
+    if: ${{ github.event.issue.pull_request }}
     env:
-      HEAD_OWNER: ${{ github.event.pull_request.head.repo.owner.login }}
+      HEAD_OWNER: ${{ github.event.issue.pull_request.head.repo.owner.login }}
     steps: 
       - uses: actions/checkout@v2
         with:
@@ -36,12 +36,12 @@ jobs:
       - name: Check if branch exists
         if: steps.check.outputs.triggered == 'true'
         run: |
-          existed_in_repo=$(git ls-remote --heads origin pr/${{ github.ref }})
+          existed_in_repo=$(git ls-remote --heads origin pr/${{ github.event.issue.pull_request.head.ref }})
           if [[ -z ${existed_in_repo} ]]
           then
-            echo "branch pr/${{ github.ref }} is not exists"
+            echo "branch pr/${{ github.event.issue.pull_request.head.ref }} is not exists"
           else
-           echo "branch pr/${{ github.ref }} deleted" 
+           echo "branch pr/${{ github.event.issue.pull_request.head.ref }} deleted" 
           fi
 
 
