--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -13,20 +13,36 @@ on:
 #         required: true
   issue_comment:
     types: [created]
-  pull_request:
-    types: [created, synchronize, reopened]
-
+    
 jobs:
   create_branch:
     runs-on: ubuntu-latest
     if: ${{ github.event.issue.pull_request }}
     env:
       HEAD_OWNER: ${{ github.event.issue.pull_request.head.repo.owner.login }}
-    steps: 
+    steps:
+      - uses: actions/github-script@v3
+        id: get-pr
+        with:
+          script: |
+            const request = {
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number
+            }
+            core.info(`Getting PR #${request.pull_number} from ${request.owner}/${request.repo}`)
+            try {
+              const result = await github.pulls.get(request)
+              return result.data
+            } catch (err) {
+              core.setFailed(`Request failed with error ${err}`)
+            }
       - uses: actions/checkout@v2
         with:
-            fetch-depth: 0 
-            token: ${{ secrets.PERSONAL_TOKEN }}
+          fetch-depth: 0
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          repository: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.full_name }}
+          ref: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
             
       - uses: khan/pull-request-comment-trigger@v1.1.0
         id: check
@@ -36,12 +52,14 @@ jobs:
       - name: Check if branch exists
         if: steps.check.outputs.triggered == 'true'
         run: |
-          existed_in_repo=$(git ls-remote --heads origin pr/${{ github.event.issue.pull_request.head.ref }})
+          echo "${{ github.ref }}"
+          echo "${{ github.repository }}"
+          existed_in_repo=$(git ls-remote --heads origin pr/${{ github.ref }})
           if [[ -z ${existed_in_repo} ]]
           then
-            echo "branch pr/${{ github.event.issue.pull_request.head.ref }} is not exists"
+            echo "branch pr/${{ github.ref }} is not exists"
           else
-           echo "branch pr/${{ github.event.issue.pull_request.head.ref }} deleted" 
+           echo "branch pr/${{ github.ref }} deleted" 
           fi
 
 
