--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -49,28 +49,31 @@ jobs:
   
       - name: Check if branch exists
         if: steps.check.outputs.triggered == 'true'
+        env: 
+          REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
         run: |
-          echo "${{ github.ref }}"
-          echo "${{ github.repository }}"
-          existed_in_repo=$(git ls-remote --heads origin pr/${{ github.ref }})
+          echo "${{ env.REF }}"
+          existed_in_repo=$(git ls-remote --heads origin pr/${{ env.REF }})
           if [[ -z ${existed_in_repo} ]]
           then
-            echo "branch pr/${{ github.ref }} is not exists"
+            echo "branch pr/${{ env.REF }} is not exists"
           else
-           echo "branch pr/${{ github.ref }} deleted" 
+           echo "branch pr/${{ env.REF }} deleted" 
           fi
 
-
-#       - name: Git remote add upstream
-#         if: steps.check.outputs.triggered == 'true'
-#         run: |
-#           git remote add upstream https://github.com/${{ env.HEAD_OWNER }}/fork-to-branch.git
-#           git fetch --all
-#           git checkout upstream/${{ github.event.pull_request.head.ref }}
-#           git checkout -b pr/${{ github.event.pull_request.head.ref }}
-#           git push --set-upstream origin pr/${{ github.event.pull_request.head.ref }}
+      - name: Git remote add upstream
+        if: steps.check.outputs.triggered == 'true'
+        env:
+          OWNER: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.owner.login }}
+          REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
+        run: |
+          git remote add upstream https://github.com/${{ env.OWNER }}/fork-to-branch.git
+          git fetch --all
+          git checkout upstream/${{ env.REF }}
+          git checkout -b pr/${{ env.REF }}
+          git push --set-upstream origin pr/${{ env.REF }}
           
-#           echo "Forked branch ${{ github.event.pull_request.head.ref }} has been pushed to fork-to-branch repo pr/${{ github.event.pull_request.head.ref }}"
+          echo "Forked branch ${{ env.REF }} has been pushed to fork-to-branch repo pr/${{ env.REF }}"
 
 
 
