--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -67,10 +67,9 @@ jobs:
         env:
           OWNER: ${{ fromJSON(steps.get-pr.outputs.result).head.repo.owner.login }}
           REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
-          PR_REF: ${{ fromJSON(steps.get-pr.outputs.result).ref }}
+          PR_NUMBER: ${{ github.event.issue.number }}
         run: |
-          echo "$PR_REF"
-          echo ::set-env name=PULL_NUMBER::$(echo "$PR_REF" | awk -F / '{print $3}')
+          echo "$PR_NUMBER"
           git remote add upstream https://github.com/shaharblanksela/fork-to-branch.git
           git fetch --all
           git checkout ${{ env.REF }}
