--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -77,6 +77,15 @@ jobs:
           git push --set-upstream upstream pr/${{ env.REF }}
           
           echo "Forked branch ${{ env.OWNER }}:${{ env.REF }} has been pushed to fork-to-branch repo pr/${{ env.REF }}"
+          
+      - name: Edit PR comment
+        uses: thollander/actions-comment-pull-request@v1
+        env: 
+          REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
+          PR_NUMBER: ${{ github.event.issue.number }}
+        with:
+          message: 'The branch pr/${{ env.REF }} was created! (edited)'
+          comment_includes: 'run branch'
 
 
 
