--- a/.github/workflows/fork-to-branch.yml
+++ b/.github/workflows/fork-to-branch.yml
@@ -79,13 +79,17 @@ jobs:
           
           echo "Forked branch ${{ env.OWNER }}:${{ env.REF }} has been pushed to fork-to-branch repo pr/${{ env.REF }}"
           
-      - name: Comment a pull_request
-        uses: mb2dev/github-action-comment-pull-request@1.0.0
+      - name: Create comment
+        uses: peter-evans/create-or-update-comment@v2
+        env:
+          REF: ${{ fromJSON(steps.get-pr.outputs.result).head.ref }}
+          PR_NUMBER: ${{ github.event.issue.number }}
         with:
-          message: "The branch pr/${{ env.REF }}-${{ env.PR_NUMBER }} was created!!!"
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
-          reactions: "+1"
-
+          issue-number: ${{ env.PR_NUMBER }}
+          body: |
+            The branch pr/${{ env.REF }}-${{ env.PR_NUMBER }} was created!!!
+          reactions: '+1'
+          
 
 
 
